Bump up calcite version and make upsert using materializedView threadsafe (#103)
* Bump up calcite version and make upsert using materializedView threadsafe

* Bump up kudu version