@@ -54,17 +54,17 @@
     </modules>
 
     <properties>
-        <kudu.version>1.16.0</kudu.version>
+        <kudu.version>1.17.0</kudu.version>
         <!-- If https://issues.apache.org/jira/browse/CALCITE-5226 is resolved
              remove the commons-dpcp2 in dependency management -->
-        <calcite.version>1.34.0</calcite.version>
+        <calcite.version>1.36.0</calcite.version>
         <guava.version>32.1.3-jre</guava.version>
         <junit.version>4.13.2</junit.version>
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <mockito.version>4.6.1</mockito.version>
         <spotless.version>2.41.1</spotless.version>
-        <freemarker-version>2.3.30</freemarker-version>
+        <freemarker-version>2.3.32</freemarker-version>
         <json-version>20231013</json-version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -240,6 +240,13 @@
                     <target>${java.version}</target>
                     <source>${java.version}</source>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <compilerArgs combine.children="append">
+                        <arg>-J--add-opens=java.base/java.net=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=java.base/java.sql=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -333,7 +340,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-goals</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.2.2</version>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -362,7 +376,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.2.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
